[l10n] [l10n-sync] Synchronising with translation files from packages/po
r30285

--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -30,12 +30,13 @@
 # 30-07-2005 - Miguel Figueiredo <elmig@debianpt.org> - 6f18u
 # 14-08-2005 - Miguel Figueiredo <elmig@debianpt.org> - 7f14u
 # 18-08-2005 - Miguel Figueiredo <elmig@debianpt.org> - 35f42u
+# 31-08-2005 - Miguel Figueiredo <elmig@debianpt.org> - 8f3u
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-14 11:31+0000\n"
+"PO-Revision-Date: 2005-08-31 19:21+0000\n"
 "Last-Translator:  Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team:  Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -53,7 +54,6 @@ msgstr "Continuar sem carregador do sistema"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -61,9 +61,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Algumas variáveis necessitam ser definidas no Pegasos OpenFirmware de modo a "
-"que o seu sistema Debian arranque automaticamente.  No fim da instalação, o "
-"sistema irá reiniciar.  Na linha de comandos do Pegasos OpenFirmware, defina "
-"as seguintes variáveis do OpenFirmware para habilitar o arranque automático:"
+"que o seu sistema arranque automaticamente.  No fim da instalação, o sistema "
+"irá reiniciar.  Na linha de comandos do Pegasos OpenFirmware, defina as "
+"seguintes variáveis do OpenFirmware para habilitar o arranque automático:"
 
 #. Type: note
 #. Description
@@ -84,7 +84,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Alternativamente, poderá iniciar o kernel manualmente introduzindo :"
+msgstr "Em alternativa, poderá iniciar o kernel manualmente introduzindo :"
 
 #. Type: note
 #. Description
@@ -107,7 +107,6 @@ msgstr "A definir variáveis de firmware para arranque automático"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -116,8 +115,8 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Algumas variáveis necessitam ser definidas no firmware Netwinder NeTTrom de "
-"modo que o seu sistema Debian arranque automaticamente.  No fim desta etapa "
-"de instalação, o sistema vai reiniciar, e o firmware vai tentar iniciar "
+"modo que o seu sistema arranque automaticamente.  No fim desta etapa da "
+"instalação, o sistema vai reiniciar, e o firmware vai tentar iniciar "
 "automaticamente.  Pode abortar pressionando qualquer tecla. Irá então para o "
 "sistema de comandos NeTTrom onde tem de executar os seguintes comandos:"
 
@@ -142,13 +141,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Só necessita fazer isto uma vez.  Depois, introduza o comando \"boot\" ou "
-"reinicie o sistema para proceder à próxima etapa de instalação de Debian."
+"reinicie o sistema para continuar com a próxima etapa da instalação."
 
 #. Type: note
 #. Description
@@ -170,10 +168,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "Vai necessitar iniciar manualmente com o kernel ${KERNEL} na partição "
-"${BOOT} e ${ROOT} passados como argumentos do kernel."
+"${BOOT} e ${ROOT} passado como argumento do kernel."
