[l10n] [l10n-sync] Synchronising with translation files from packages/po
r30314

--- a/debian/po/uk.po
+++ b/debian/po/uk.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: uk\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-02 16:36+0300\n"
+"PO-Revision-Date: 2005-09-02 21:42+0300\n"
 "Last-Translator: Eugeniy Meshcheryakov <eugen@univ.kiev.ua>\n"
 "Language-Team: Ukrainian\n"
 "MIME-Version: 1.0\n"
@@ -34,17 +34,16 @@ msgstr "Продовжити без завантажувача"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Для автоматичного завантаження системи необхідно встановити змінні Pegasos "
-"OpenFirmware. Після закінчення встановлення система перезвантажиться. Для "
-"автоматичного завантаження, встановіть наступні змінні із командного рядка "
-"Pegasos OpenFirmware:"
+"Для автоматичного завантаження системи необхідно встановити деякі змінні "
+"Pegasos OpenFirmware. Після закінчення встановлення система "
+"перезавантажиться. Для автоматичного завантаження встановіть наступні змінні "
+"з командного рядка Pegasos OpenFirmware:"
 
 #. Type: note
 #. Description
@@ -90,7 +89,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -98,10 +96,10 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Для автоматичного завантаження Debian необхідно встановити змінні "
+"Для автоматичного завантаження системи необхідно встановити деякі змінні "
 "вбудованого програмного забезпечення Netwinder NeTTrom. Після закінчення "
-"цього етапу встановлення система перезвантажиться та вбудоване програмне "
-"забезпечення намагатиметься завантажитися автоматично. Ви можете перервати "
+"цього етапу встановлення система перезавантажиться та вбудоване програмне "
+"забезпечення намагатиметься завантажитися автоматично. Ви можете перепинити "
 "це натиснувши будь-яку клавішу. Після цього ви попадете в командну систему "
 "NeTTrom, де вам потрібно буде виконати наступні команди:"
 
@@ -126,13 +124,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Вам потрібно буде зробити це тільки один раз. Після цього, наберіть „boot“ "
-"або перезавантажте систему для наступного етапу встановлення Debian."
+"або перезавантажте систему для наступного етапу встановлення."
 
 #. Type: note
 #. Description
@@ -153,10 +150,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "Ви повинні будете завантажитися вручну з ядром ${KERNEL} на розділі ${BOOT} "
-"та з ${ROOT} переданим, як аргумент ядра."
+"та з ${ROOT} переданим як аргумент ядра."
