[l10n] [l10n-sync] Synchronising with translation files from packages/po
r30336

--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -17,21 +17,25 @@
 #         or http://www.debian.org/intl/l10n/po-debconf/README-trans
 #
 #    Developers do not need to manually edit POT or PO files.
-# Eddy Petrisor <eddy_petrisor@yahoo.com>, 2004, 2005.
-# Eddy Petrisor <eddy.petrisor@gmail.com>, 2005.
+# Eddy Petrişor <eddy_petrisor@yahoo.com>, 2004, 2005.
+# Eddy Petrişor <eddy.petrisor@gmail.com>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: ro\n"
+"Project-Id-Version: debian-installer_master_po_file\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-06-25 19:19+0200\n"
-"Last-Translator: Eddy Petrişor <eddy.petrisor@gmail.com>\n"
-"Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
+"PO-Revision-Date: 2005-09-03 20:15+0200\n"
+"Last-Translator: Eddy Petrisor <eddy.petrisor@gmail.com>\n"
+"Language-Team: Debian L10N Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Report-Msgid-Bugs-To: \n"
 "X-Generator: KBabel 1.9.1\n"
+"Plural-Forms: nplurals=3;plural=(n== 1 ? 0 : ( ( (n%100 > 19) || ((n%100 == "
+"0) && (n != 0))) ? 2 : 1 ) )\n"
+"X-Poedit-Language: Romanian\n"
+"X-Poedit-Country: Romania\n"
 
 #. Type: text
 #. Description
@@ -43,7 +47,6 @@ msgstr "Continuă fără încărcător de sistem"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -51,9 +54,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Unele variabile trebuie să fie iniţializate în Pegasos OpenFirmware pentru "
-"ca sistemul dvs. să poată porni automat. La sfârşitul instalării, sistemul "
-"va reporni. La promptul Pegasos OpenFirmware iniţializaţi următoarele "
-"variabile OpenFirmware pentru activarea pornirii automate:"
+"ca sistemul dvs. să poată porni linux automat. La sfârşitul instalării, "
+"sistemul va reporni. La promptul Pegasos OpenFirmware iniţializaţi "
+"următoarele variabile OpenFirmware pentru activarea pornirii automate:"
 
 #. Type: note
 #. Description
@@ -97,7 +100,6 @@ msgstr "Se pregătesc variabilele firmware pentru pornire automată"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -105,11 +107,12 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Unele variabile trebuie să fie setate în firmware-ul Netwinder NeTTrom "
-"pentru ca sistemul dvs. să poată porni Debian automat. La sfârşitul "
-"instalării sistemul va reporni şi firmware-ul va încerca să pornească "
-"automat. Puteţi abandona prin apăsarea unei taste. Veţi fi lăsaţi la "
-"sistemul de comenzi NeTTrom unde va trebui să executaţi următoarele comenzi:"
+"Unele variabile trebuie să fie ajustate în firmware-ul Netwinder NeTTrom "
+"pentru ca sistemul dvs. să poată porni linux automat. La sfârşitul acestui "
+"stadiu al instalării sistemul va reporni şi firmware-ul va încerca să "
+"pornească automat. Puteţi abandona prin apăsarea unei taste. Veţi fi lăsaţi "
+"la sistemul de comenzi NeTTrom unde va trebui să executaţi următoarele "
+"comenzi:"
 
 #. Type: note
 #. Description
@@ -132,14 +135,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Va trebui să faceţi acest lucru doar o dată. După aceea, introduceţi comanda "
 "\"boot\" sau reporniţi sistemul pentru a continua la următoarea etapă a a "
-"procesului de instalare Debian."
+"procesului de instalare."
 
 #. Type: note
 #. Description
@@ -154,17 +156,15 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Nu s-a instalat nici un încărcător de sistem, pentru că aţi ales să nu-l "
-"instalaţi sau pentru că arhitectura dvs. nu suportă încă un încărcător de "
-"sistem."
+"Nu s-a instalat nici un încărcător de sistem, pentru că aşa aţi ales sau "
+"pentru că arhitectura dvs. nu suportă încă un încărcător de sistem."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "Va trebui să porniţi manual cu nucleul ${KERNEL} pe partiţia ${BOOT}, iar "
-"${ROOT} palsat ca argument de nucleu."
+"${ROOT} trebuie plasat ca argument de nucleu."
