--- a/debian/po/eu.po
+++ b/debian/po/eu.po
@@ -3,7 +3,6 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of eu.po to 
 # translation of eu.po to Euskara
 # Basque messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
@@ -15,14 +14,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: eu\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-09 20:49+0200\n"
-"Last-Translator:  Piarres Beobide <pi@beobide.net>\n"
-"Language-Team:  librezale.org <librezale@librezale.org>\n"
+"PO-Revision-Date: 2005-09-10 00:04+0200\n"
+"Last-Translator: Piarres Beobide <pi@beobide.net>\n"
+"Language-Team: librezale.org <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Report-Msgid-Bugs-To: \n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: KBabel 1.10.2\n"
 
 #. Type: text
 #. Description
@@ -34,14 +34,13 @@ msgstr "Jarraitu abioko kargatzailerik gabe"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Aldagai batzuk Pegasos OpenFirmware-n ezarri behar dira zure sistemak Debian "
+"Aldagai batzuk Pegasos OpenFirmware-n ezarri behar dira zure sistemak linux "
 "automatikoki abiaraz dezan.  Instalazioaren amaieran, sistema berrabiarazi "
 "egingo da. Pegasos OpenFirmware prompt gonbitean, ezarri OpenFirmware-ren "
 "aldagai hauek automatikoki abiaraztea gaitzeko:"
@@ -88,7 +87,6 @@ msgstr "Firmwarearen aldagaiak ezartzen automatikoki abiarazteko"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -97,7 +95,7 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Aldagai batzuk Netwinder NeTTrom firmwarean ezarri behar dira zure sistemak "
-"Debian automatikoki abiaraz dezan. Instalazio-fase honen amaieran, sistema "
+"linux automatikoki abiaraz dezan. Instalazio-fase honen amaieran, sistema "
 "berrabiarazi egingo da, eta firmwarea automatikoki abiarazten saiatuko da."
 "Hau edozein tekla sakatuz aborta dezakezu. Orduan, NeTTrom komando-sistemara "
 "eramango zaitu eta han komando hauek exekutatu behar dituzu:"
@@ -123,13 +121,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Hori behin egitea nahikoa da. Ondoren, sartu \"boot\" komandoa edo "
-"berrabiarazi sistema Debian instalatzeko hurrengo fasera joateko."
+"berrabiarazi sistema instalatzeko hurrengo fasera joateko."
 
 #. Type: note
 #. Description
@@ -150,7 +147,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
