[l10n] [l10n-sync] Synchronising with translation files from packages/po
r30482

--- a/debian/po/wo.po
+++ b/debian/po/wo.po
@@ -3,7 +3,9 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of wo.po to 
+# translation of wo.po to Wolof
+# translation of wo.po to
+# translation of wo.po to
 # translation of wo.po to
 # translation of wo.po to
 # translation of wo.po to
@@ -17,9 +19,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wo\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-07-06 17:45+0000\n"
-"Last-Translator: Mouhamadou Mamoune Mbacke\n"
-"Language-Team:  <en@li.org>\n"
+"PO-Revision-Date: 2005-08-27 12:51+0000\n"
+"Last-Translator: Mouhamadou Mamoune Mbacke <mouhamadoumamoune@gmail.com>\n"
+"Language-Team: Wolof <debian-boot@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -36,17 +38,16 @@ msgstr "Kontine ci ludul sëfkatu boot bi"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Warees naa sampu yenn wariaabal ci Pegasos OpenFirmware ngir sa sistem bi "
-"man boot ci otomatik. Bu istalaasioŋ bi aggee, sistem bi dana reboot. Ci "
-"prompt bu Pegasos OpenFirmware, nanga sampu wariaabal yu OpenFirmware yii di "
-"ñaw ngir nga mana am boot otomatik:"
+"Warees naa sampu yenn wariaabal ci mikro-kod Pegasos OpenFirmware ngir sa "
+"sistem bi man demaare ci otomatik. Bu istalaasioŋ bi aggee, sistem bi dana "
+"demaarewaat. Ci woote bu Pegasos OpenFirmware, nanga sampu wariaabal yu "
+"OpenFirmware yii di ñaw ngir nga mana am demaare otomatik:"
 
 #. Type: note
 #. Description
@@ -91,7 +92,6 @@ msgstr "Mi ngi regle wariaabal yu firmware ngir am boot bu otomatik"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -99,11 +99,12 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Amna wariaabal yu ñu soxlaa sampu ci Netwinder Nettrom firmware ngir  sa "
-"sistem bi mana boot Debian ci otomatik. Saa bu istalaasioŋ bi aggee, sistem "
-"bi dana reboot, ta firmware bi dana jéem a boot ci otomatik. Loolu nak da "
-"nga ko mana taxawal boo bësée butoo bu mu mana doon. Bu boobaa da nga duggu "
-"ci sistem u komaande bu NeTTrom, buko defee nga doxal komaande yii di ñëw:"
+"Amna wariaabal yu ñu soxlaa sampu ci mikro-kod ('firmware') NeTTrom bu "
+"Netwinder ngir  sa sistem bi mana demaareel boppam  Linuxi.  Saa bu etaap "
+"bii jeexee, sistem bi dana demaarewaat (reboot), ta firmware bi dana jéem a "
+"demaare boppam. Loolu nak da nga ko mana taxawal boo bësée butoŋ bu mu mana "
+"doon. Bu boobaa da nga duggu ci sistem u komaande bu NeTTrom, buko defee nga "
+"doxal komaande yii di ñëw:"
 
 #. Type: note
 #. Description
@@ -126,20 +127,19 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Lii benn yoon rekk nga koy soxlaa def.  Bu loolu jallee, bindal komaande "
-"\"boot\" walla nga reboot system bi ngir jall ca etaap bi ci toppu ci "
-"istalaasioŋ u Debian."
+"\"boot\" walla nga demaarewaat (reboot) sistem bi ngir jall ca etaap bu "
+"istalaasioŋ bi ci toppu."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Amul benn sëkatu boot bu ñu istale"
+msgstr "Amul benn porogaraam u demaare bu ñu istale"
 
 #. Type: note
 #. Description
@@ -154,10 +154,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Da nga soxlaa boot ak sa loxo kernel bii di ${KERNEL} nekk ci partisoŋ "
-"${BOOT} ak ${ROOT} da nga leen di joxe ñu di ay argimaa yu kernel bi."
+"Da nga soxlaa demaare ak sa loxo kernel bii di ${KERNEL} nekk ci partisoŋ "
+"${BOOT} ta ${ROOT} ñu joxe ko muy argimaa yu kernel bi."
