--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -25,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-18 14:09+0200\n"
-"Last-Translator: Stefano Canepa <sc@linux.it>\n"
+"PO-Revision-Date: 2005-09-11 16:58+0200\n"
+"Last-Translator: Giuseppe Sacco <eppesuig@debian.org>\n"
 "Language-Team:   Italian <debian-l10n-italian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,7 +43,6 @@ msgstr "Continua senza un boot loader"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -51,9 +50,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Alcune variabili di Pegasos OpenFirmware vanno impostate per poter avviare "
-"il sistema Debian in automatico. Al termine della installazione il sistema "
-"verrà riavviato. Al prompt di Pegasos OpenFirmware le seguenti variabili "
-"dovranno essere impostate per permettere l'avvio automatico:"
+"il sistema in automatico. Al termine della installazione il sistema verrà "
+"riavviato. Al prompt di Pegasos OpenFirmware le seguenti variabili dovranno "
+"essere impostate per permettere l'avvio automatico:"
 
 #. Type: note
 #. Description
@@ -97,7 +96,6 @@ msgstr "Impostazione delle variabili del firmware per l'avvio automatico"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -106,11 +104,11 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Alcune variabili del firmware Netwinder NeTTrom vanno impostate perché il "
-"sistema Debian venga avviato in maniera automatica. Al termine di questo "
-"passo di installazione il sistema verrà riavviato e il firmware proverà "
-"l'avvio automatico. Si può bloccare questa operazione premendo un tasto "
-"qualsiasi; dopodiché si avrà accesso al \"NeTTrom command system\" dove "
-"devono essere eseguiti i seguenti comandi:"
+"sistema venga avviato in maniera automatica. Al termine di questo passo di "
+"installazione il sistema verrà riavviato e il firmware proverà l'avvio "
+"automatico. Si può bloccare questa operazione premendo un tasto qualsiasi; "
+"dopodiché si avrà accesso al \"NeTTrom command system\" dove devono essere "
+"eseguiti i seguenti comandi:"
 
 #. Type: note
 #. Description
@@ -133,14 +131,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Questa operazione dovrà essere fatta solo la prima volta. Dopodiché sarà "
 "necessario eseguire il comando \"boot\" oppure riavviare il sistema per "
-"proseguire con la seconda fase dell'installazione di Debian."
+"proseguire con la seconda fase dell'installazione."
 
 #. Type: note
 #. Description
@@ -161,7 +158,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
