--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -10,13 +10,14 @@
 # Russian L10N Team <debian-l10n-russian@lists.debian.org>, 2004.
 # Yuri Kozlov <yuray@id.ru>, 2004, 2005.
 # Dmitry Beloglazov <dm-guest@alioth.debian.org>, 2005.
+# Yuri Kozlov <kozlov.y@gmail.com>, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: ru\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-07-25 21:11+0400\n"
-"Last-Translator: Yuri Kozlov <yuray@id.ru>\n"
+"PO-Revision-Date: 2005-09-10 09:55+0400\n"
+"Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -36,17 +37,16 @@ msgstr "Продолжение установки без системного з
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Для автоматического запуска системы требуется установить некоторые "
-"переменные в Pegasos OpenFirmware. В конце установки система будет "
-"перезагружена. Из приглашения Pegasos OpenFirmware установите следующие "
-"переменные для автозагрузки:"
+"Для автоматического запуска linux требуется установить некоторые переменные "
+"в Pegasos OpenFirmware. В конце установки система будет перезагружена. Из "
+"приглашения Pegasos OpenFirmware установите следующие переменные "
+"OpenFirmware для автозагрузки:"
 
 #. Type: note
 #. Description
@@ -90,7 +90,6 @@ msgstr "Установка переменных firmware для автозагр
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -98,11 +97,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Для автоматического запуска Debian требуется установить некоторые переменные "
-"в Netwinder NeTTrom firmware. В конце этой стадии установки, система будет "
-"перезагружена, и будет произведена попытка автозагрузки с помощью firmware."
-"Вы можете отменить это, нажав любую клавишу. Затем вы попадёте в командную "
-"систему NeTTrom, где выполните следующие команды:"
+"Для автоматического запуска linux требуется установить некоторые переменные "
+"для микропрограммы Netwinder NeTTrom. В конце этой стадии установки, система "
+"будет перезагружена, и будет произведена попытка автозагрузки с помощью "
+"микропрограммы.Вы можете отменить это, нажав любую клавишу. Затем вы "
+"попадёте в командную систему NeTTrom, где выполните следующие команды:"
 
 #. Type: note
 #. Description
@@ -125,14 +124,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Это необходимо сделать только один раз. После этого, введите команду \"boot"
-"\" или перезагрузите систему, чтобы перейти к следующему этапу установки "
-"Debian."
+"\" или перезагрузите систему, чтобы перейти к следующему этапу установки."
 
 #. Type: note
 #. Description
@@ -154,10 +151,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Вам придется загружать ядро ${KERNEL_LOC} вручную и передать ему в качестве "
-"аргумента ${BOOT} и ${ROOT}."
+"Вам придется загружать ядро ${KERNEL} вручную с раздела ${BOOT} и передать "
+"ему в качестве аргумента ${ROOT}."
