[l10n] [l10n-sync] Synchronising with translation files from packages/po
r30586

--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-05 19:01+0200\n"
+"PO-Revision-Date: 2005-09-16 14:34+0200\n"
 "Last-Translator: Jacobo Tarrio <jtarrio@debian.org>\n"
 "Language-Team: Galego <trasno@ceu.fi.udc.es>\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +29,6 @@ msgstr "Seguir sen cargador de inicio"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -37,8 +36,8 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "É necesario estabrecer algunhas variables en Pegasos OpenFirmware para que o "
-"seu sistema arrinque automaticamente. Ao rematar a instalación, o sistema "
-"hase reiniciar. No indicativo de Pegasos OpenFirmware, estabreza as "
+"seu sistema arrinque linux automaticamente. Ao rematar a instalación, o "
+"sistema hase reiniciar. No indicativo de Pegasos OpenFirmware, estabreza as "
 "seguintes variables de OpenFirmware para permitir o inicio automático:"
 
 #. Type: note
@@ -85,7 +84,6 @@ msgstr "Configurando as variables do firmware para o inicio automático"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -94,7 +92,7 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "É necesario estabrecer algunhas variables no firmware de Netwinder NeTTrom "
-"para que o seu sistema inicie Debian automaticamente. Ao rematar esta etapa "
+"para que o seu sistema inicie linux automaticamente. Ao rematar esta etapa "
 "de instalación, o sistema ha iniciarse, e o firmware ha tratar de "
 "autoiniciarse. Pode abortalo premendo calquera tecla; despois háselle "
 "transferir ao sistema de ordes de NeTTrom onde terá que executar as "
@@ -121,14 +119,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Só ha ter que facer isto unha vez. Despois, introduza a orde \"boot\" ou "
-"reinicie o sistema para continuar coa seguinte etapa da instalación de "
-"Debian."
+"reinicie o sistema para continuar coa seguinte etapa da instalación."
 
 #. Type: note
 #. Description
@@ -150,10 +146,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Ha ter que iniciar a man co núcleo ${KERNEL} na partición ${BOOT} e ${ROOT} "
-"pasadas como argumentos para o núcleo."
+"Ha ter que iniciar a man co núcleo ${KERNEL} na partición ${BOOT} e con "
+"${ROOT} pasado coma un argumento para o núcleo."
