[l10n] [l10n-sync] Synchronising with translation files from packages/po
r30628

--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -13,12 +13,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nl\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-05 16:49+0100\n"
-"Last-Translator: Bart Cornelis <cobaco@linux.be>\n"
+"PO-Revision-Date: 2005-09-17 22:58+0200\n"
+"Last-Translator: Frans Pop <aragorn@tiscali.nl>\n"
 "Language-Team: Dutch <debian-l10n-dutch@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 "X-Generator: KBabel 1.9.1\n"
 
 #. Type: text
@@ -31,18 +32,17 @@ msgstr "Verder gaan zonder opstartlader"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Sommige variabelen van de Pegasos OpenFirmware dienen ingesteld te worden "
-"opdat uw systeem automatisch zou opstarten. Aan het einde van het "
-"installatieproces zal uw systeem heropgestart worden. Op de OpenFirmware-"
-"prompt dienen de volgende OpenFirmware-variabelen ingesteld te worden om "
-"automatisch opstarten te activeren:"
+"In de Pegasos OpenFirmware dienen enkele variabelen te worden ingesteld om "
+"uw systeem Linux automatisch te kunnen laten opstarten. Aan het einde van "
+"het installatieproces zal uw systeem worden herstart. Om automatisch "
+"opstarten mogelijk te maken, dienen bij de OpenFirmware-prompt de volgende "
+"OpenFirmware-variabelen te worden ingesteld:"
 
 #. Type: note
 #. Description
@@ -88,7 +88,6 @@ msgstr "Firmware-variabelen worden ingesteld voor automatisch opstarten"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -96,12 +95,12 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Om uw systeem automatisch Debian te laten opstarten dienen een aantal "
-"variabelen binnen de Netwinder NeTTrom firmware juist ingesteld te worden. "
-"Aan het eind van deze installatie zal het systeem herstarten, en zal de "
-"firmware proberen om automatisch op te starten. U kunt dit afbreken door om "
-"het even welke toets in te drukken. U zult dan terechtkomen in het NeTTrom "
-"commando-systeem waar u de volgende commando's dient uit te voeren:"
+"In de Netwinder NeTTrom firmware dienen enkele variabelen te worden "
+"ingesteld om uw systeem Linux automatisch te kunnen laten opstarten. Aan het "
+"einde van het installatieproces zal uw systeem worden herstart en zal de "
+"firmware proberen door te starten. U kunt dit afbreken door een willekeurige "
+"toets in te drukken. U zult dan terechtkomen in het NeTTrom commando-systeem "
+"waar u de volgende commando's dient uit te voeren:"
 
 #. Type: note
 #. Description
@@ -124,7 +123,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
@@ -153,10 +151,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"U zult handmatig moeten opstarten met de '${KERNEL}'-kernel op partitie "
+"U zult handmatig moeten opstarten met de kernel '${KERNEL}' op partitie "
 "'${BOOT}' en met '${ROOT}' als kernelparameter."
