[l10n] [l10n-sync] Synchronising with translation files from packages/po
r30686

--- a/debian/po/lt.po
+++ b/debian/po/lt.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lt\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-01 23:43+0300\n"
+"PO-Revision-Date: 2005-09-21 01:13+0300\n"
 "Last-Translator: Kęstutis Biliūnas <kebil@kaunas.init.lt>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "MIME-Version: 1.0\n"
@@ -32,7 +32,6 @@ msgstr "Tęsti be pradinio įkėliklio"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -41,7 +40,7 @@ msgid ""
 msgstr ""
 "Kai kurie Pegasos OpenFirmware kintamieji turi būti nustatyti, tam kad Jūsų "
 "sistema galėtų būti automatiškai įkelta. Įdiegimo pabaigoje, sistema bus "
-"perkraunama. Esant Pegasos OpenFirmware kvietimui,  nustatykite sekančius "
+"perkraunama.  Esant Pegasos OpenFirmware kvietimui,  nustatykite sekančius "
 "OpenFirmware kintamuosius, kad būtų galimas automatinis įkėlimas:"
 
 #. Type: note
@@ -86,7 +85,6 @@ msgstr "Mikroprogramos (firmware) kintamųjų nustatymas automatiniam įkėlimui
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -95,11 +93,11 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Kai kurie Netwinder NeTTrom mikroprogramos (firmware) kintamieji turi būti "
-"nustatyti, tam kad Jūsų sistema galėtų automatiškai įkelti (boot) Debian'ą. "
-"Šios įdiegimo stadijos pabaigoje, sistema bus perkraunama, ir mikroprograma "
-"(fiemware) bandys atlikti automatinį įkėlimą. Jūs galite nutraukti šį "
-"procesą, paspaudę bet kurį klavišą. Tuomet Jūs atsidursite NeTTrom "
-"komandinėje sistemoje, kur Jūs turėsite paleisti vykdyti sekančias komandas:"
+"nustatyti, tam kad Jūsų sistema galėtų įkelta automatiškai. Šios įdiegimo "
+"stadijos pabaigoje, sistema bus perkraunama, ir mikroprograma (fiemware) "
+"bandys atlikti automatinį įkėlimą. Jūs galite nutraukti šį procesą, paspaudę "
+"bet kurį klavišą. Tuomet Jūs atsidursite NeTTrom komandinėje sistemoje, kur "
+"Jūs turėsite paleisti vykdyti sekančias komandas:"
 
 #. Type: note
 #. Description
@@ -122,7 +120,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
@@ -149,7 +146,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
