--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-07-19 15:00+0200\n"
+"PO-Revision-Date: 2005-09-20 13:08+0200\n"
 "Last-Translator: Peter Mann <Peter.Mann@tuke.sk>\n"
 "Language-Team:  Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +29,6 @@ msgstr "Pokračovať bez zavádzača"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -38,8 +37,8 @@ msgid ""
 msgstr ""
 "Na automatické spúšťanie systému je potrebné nastavenie niektorých "
 "premenných v Pegasos OpenFirmware. Na konci inštalácie sa systém reštartuje. "
-"V príkazovom režime Pegasos OpenFirmware môžete umožniť automatické "
-"štartovanie nastavením nasledovných premenných:"
+"V príkazovom režime Pegasos OpenFirmware povolíte automatické štartovanie "
+"nastavením nasledovných premenných:"
 
 #. Type: note
 #. Description
@@ -83,7 +82,6 @@ msgstr "Nastavenie premenných firmware pre automatické štartovanie"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -91,7 +89,7 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Na automatické štartovanie Debianu je potrebné nastavenie niektorých "
+"Na automatické štartovanie systému je potrebné nastavenie niektorých "
 "premenných vo firmware Netwinder NeTTrom. Na konci tejto fázy inštalácie sa "
 "systém reštartuje a firmware sa pokúsi o automatické štartovanie, ktoré "
 "môžete prerušiť stlačením ľubovoľného klávesu. Následne na to sa ocitnete v "
@@ -118,13 +116,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Stačí to urobiť len raz. Potom zadajte príkaz \"boot\" alebo reštartujte "
-"systém, aby ste sa dostali do ďalšej etapy inštalácie Debian-u."
+"systém, aby ste sa dostali do ďalšej etapy inštalácie systému."
 
 #. Type: note
 #. Description
@@ -145,10 +142,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Budete musieť naštartovať manuálne s jadrom ${KERNEL} na oblasti ${BOOT} a s "
-"parametrami jadra ${ROOT}."
+"Budete musieť naštartovať manuálne s jadrom ${KERNEL} na oblasti ${BOOT} "
+"spolu s parametrami jadra ${ROOT}."
