--- a/debian/po/eu.po
+++ b/debian/po/eu.po
@@ -3,7 +3,7 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of eu.po to librezale.org
+# translation of eu.po to 
 # translation of eu.po to Euskara
 # Basque messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
@@ -15,15 +15,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: eu\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-09-10 00:04+0200\n"
-"Last-Translator: Piarres Beobide <pi@beobide.net>\n"
-"Language-Team: librezale.org <librezale@librezale.org>\n"
+"PO-Revision-Date: 2005-06-20 16:14+0200\n"
+"Last-Translator: Piarres Beobide <pi@beobide.net> \n"
+"Language-Team:  librezale <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Report-Msgid-Bugs-To: \n"
+"X-Generator: KBabel 1.9.1\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: KBabel 1.10.2\n"
 
 #. Type: text
 #. Description
@@ -41,7 +41,7 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Aldagai batzuk Pegasos OpenFirmware-n ezarri behar dira zure sistemak linux "
+"Aldagai batzuk Pegasos OpenFirmware-n ezarri behar dira sistemak "
 "automatikoki abiaraz dezan.  Instalazioaren amaieran, sistema berrabiarazi "
 "egingo da. Pegasos OpenFirmware prompt gonbitean, ezarri OpenFirmware-ren "
 "aldagai hauek automatikoki abiaraztea gaitzeko:"
@@ -95,8 +95,8 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Aldagai batzuk Netwinder NeTTrom firmwarean ezarri behar dira zure sistemak "
-"linux automatikoki abiaraz dezan. Instalazio-fase honen amaieran, sistema "
+"Aldagai batzuk Netwinder NeTTrom firmwarean ezarri behar dira sistemak "
+"automatikoki abiaraz dezan. Instalazio-fase honen amaieran, sistema "
 "berrabiarazi egingo da, eta firmwarea automatikoki abiarazten saiatuko da."
 "Hau edozein tekla sakatuz aborta dezakezu. Orduan, NeTTrom komando-sistemara "
 "eramango zaitu eta han komando hauek exekutatu behar dituzu:"
@@ -127,7 +127,7 @@ msgid ""
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Hori behin egitea nahikoa da. Ondoren, sartu \"boot\" komandoa edo "
-"berrabiarazi sistema instalatzeko hurrengo fasera joateko."
+"berrabiarazi sistema instalazioko hurrengo fasera joateko."
 
 #. Type: note
 #. Description
