[l10n] [l10n-sync] Synchronising with translation files from packages/po
r30888

--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer 1.0\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-07-27 03:19+0300\n"
+"PO-Revision-Date: 2005-09-24 18:38+0300\n"
 "Last-Translator: Guillem Jover <guillem@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -122,14 +122,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Només tindreu que fer això una vegada. Després, introduïu l'ordre «boot» o "
 "torneu a arrencar el sistema per a continuar amb el següent pas de la "
-"instal·lació de Debian."
+"instal·lació."
 
 #. Type: note
 #. Description
@@ -150,10 +149,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "Necessitareu arrencar manualment amb el nucli ${KERNEL} en la partició "
-"${BOOT}, amb ${ROOT} com a argument per al nucli."
+"${BOOT} i passar ${ROOT} com a argument per al nucli."
