--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,34 @@
-nobootloader (1.06) UNRELEASED; urgency=low
+nobootloader (1.06) unstable; urgency=low
 
   * Add a missing "a" to one of the templates.
   * While I'm at it, remove some Debian branding, especially some that reads
     better without the "Debian".
 
- -- Joey Hess <joeyh@debian.org>  Thu, 18 Aug 2005 11:06:10 -0400
+  [ Updated translations ]
+  * Catalan (ca.po) by Guillem Jover
+  * Czech (cs.po) by Miroslav Kure
+  * Danish (da.po) by Claus Hindsgaul
+  * Greek, Modern (1453-) (el.po) by Greek Translation Team
+  * Spanish (es.po) by Javier Fernández-Sanguino Peña
+  * French (fr.po) by Christian Perrier
+  * Galician (gl.po) by Jacobo Tarrio
+  * Italian (it.po) by Giuseppe Sacco
+  * Japanese (ja.po) by Kenshi Muto
+  * Kurdish (ku.po) by Erdal Ronahi
+  * Lithuanian (lt.po) by Kęstutis Biliūnas
+  * Bokmål, Norwegian (nb.po) by Bjørn Steensrud
+  * Dutch (nl.po) by Bart Cornelis
+  * Polish (pl.po) by Bartosz Fenski
+  * Portuguese (pt.po) by Miguel Figueiredo
+  * Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
+  * Romanian (ro.po) by Eddy Petrisor
+  * Russian (ru.po) by Yuri Kozlov
+  * Slovak (sk.po) by Peter Mann
+  * Ukrainian (uk.po) by Eugeniy Meshcheryakov
+  * Vietnamese (vi.po) by Clytie Siddall
+  * Wolof (wo.po) by Mouhamadou Mamoune Mbacke
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 26 Sep 2005 17:16:23 +0200
 
 nobootloader (1.05) unstable; urgency=low
 
