--- a/debian/po/tl.po
+++ b/debian/po/tl.po
@@ -19,7 +19,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-07-07 18:19+0800\n"
+"PO-Revision-Date: 2005-10-05 16:36+0800\n"
 "Last-Translator: Eric Pareja <xenos@upm.edu.ph>\n"
 "Language-Team: Tagalog <debian-tl@banwa.upm.edu.ph>\n"
 "MIME-Version: 1.0\n"
@@ -37,7 +37,6 @@ msgstr "Magpatuloy na walang boot loader"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -93,7 +92,6 @@ msgstr "Tinatakda ang mga firmware variable para sa awtomatikong pag-boot"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -102,7 +100,7 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "May mga variable na kailangan itakda sa Netwinder NeTTrom firmware upang mag-"
-"boot ng awtomatiko ang sistema sa Debian. Sa katapusan ng hakbang ng pag-"
+"boot ng awtomatiko ang sistema sa linux. Sa katapusan ng hakbang ng pag-"
 "install na ito, mag-re-reboot ang sistema, at ang firmware ay susubukang mag-"
 "autoboot. Maaari ninyong ihinto ito sa pag-pindot ng alinmang tiklado. "
 "Kayo'y ililipat sa NeTTrom command system kung saan ay kailangan niyong "
@@ -129,14 +127,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Kinakailangan lang ninyong gawin ito ng isang beses.  Matapos nito, ipasok "
 "ang \"boot\" na utos o i-reboot ang sistema upang magpatuloy sa susunod na "
-"bahagi ng pagluklok ng Debian."
+"bahagi ng pagluklok."
 
 #. Type: note
 #. Description
@@ -158,7 +155,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
