--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-10-01 20:17+0200\n"
-"Last-Translator: Per Olofsson <pelle@debian.org>\n"
+"PO-Revision-Date: 2005-10-06 11:43+0200\n"
+"Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <debian-boot@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,7 +34,6 @@ msgstr "Fortsätt utan startladdare (boot loader)"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -42,8 +41,8 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Vissa variabler behöver konfigureras i Pegasos OpenFirmware för att ditt "
-"system ska kunna starta Debian automatiskt. Vid slutet av installationen "
-"kommer systemet att startas om. För att aktivera automatisk start av "
+"system ska kunna starta Linux automatiskt.  Vid slutet av installationen "
+"kommer systemet att startas om.  För att aktivera automatisk start av "
 "systemet ska du vid Pegasos OpenFirmware-prompten ställa in följande "
 "variabler:"
 
@@ -89,7 +88,6 @@ msgstr "Konfigurera fasta programmets variabler för automatisk start"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -97,8 +95,8 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Vissa variabler behöver konfigureras i Netwinder NeTTroms fasta program "
-"(firmware) för att ditt system ska kunna starta Debian automatiskt. Vid "
+"Vissa variabler behöver konfigureras i Netwinder NeTTrom's fasta program "
+"(firmware) för att ditt system ska kunna starta Linux automatiskt.  Vid "
 "slutet av den här installationsfasen kommer ditt system att starta om och "
 "det fasta programmet kommer att försöka att starta datorn automatiskt. Du "
 "kan avbryta det här genom att trycka på valfri tangent. Du kommer då att "
@@ -125,14 +123,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"Du kommer bara att behöva göra det här en gång. Efteråt ska du ange "
+"Du kommer bara att behöva göra det här en gång.  Efteråt ska du ange "
 "kommandot \"boot\" eller starta om systemet för att gå vidare till nästa "
-"steg i Debianinstallationen."
+"steg i installationen."
 
 #. Type: note
 #. Description
@@ -154,10 +151,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Du kommer att behöva starta manuellt med kärnan ${KERNEL} på partitionen "
-"${BOOT} med argumentet ${ROOT} till kärnan."
+"Du behöver starta upp manuellt med kärnan ${KERNEL} på partitionen ${BOOT} "
+"med argumentet ${ROOT} till kärnan."
