[l10n] [l10n-sync] Synchronising with translation files from packages/po
r31251

--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-09-20 09:32+0200\n"
+"PO-Revision-Date: 2005-10-07 10:51+0200\n"
 "Last-Translator: Bartosz Fenski <fenio@debian.org>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
 "MIME-Version: 1.0\n"
@@ -120,13 +120,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Bêdziesz musia³ zrobiæ to tylko raz. Pó¼niej wprowad¼ polecenie \"boot\" lub "
-"uruchom ponownie komputer by przej¶æ do nastêpnego etapu instalacji Debiana."
+"uruchom ponownie komputer by przej¶æ do nastêpnego etapu instalacji."
 
 #. Type: note
 #. Description
