--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-05-27 18:27+0300\n"
+"PO-Revision-Date: 2005-10-07 21:04+0300\n"
 "Last-Translator: Recai Oktaş <roktas@omu.edu.tr>\n"
 "Language-Team: Debian L10n Turkish <debian-l10n-turkish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -37,7 +37,6 @@ msgstr "Önyükleyicisiz devam et"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -93,7 +92,6 @@ msgstr "Otomatik önyükleme için yerleşil değişkenleri ayarlanıyor"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -101,12 +99,12 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Sisteminizin Debian ile otomatik olarak açılması için Netwinder NeTTrom "
-"yerleşilindeki bazı değişkenlerin ayarlanması gerekiyor.  Bu kurulum "
-"aşamasının sonunda sistem tekrar başlatılacak ve yerleşil otomatik önyükleme "
-"girişiminde bulunacaktır.  Herhangi bir tuşa basarak bu işlemi "
-"sonlandırabilirsiniz.  Daha sonra aşağıdaki komutları çalıştırmanızın "
-"gerekeceği NeTTrom komut sistemine gireceksiniz:"
+"Sisteminizin otomatik olarak açılması için Netwinder NeTTrom yerleşilindeki "
+"bazı değişkenlerin ayarlanması gerekiyor.  Bu kurulum aşamasının sonunda "
+"sistem tekrar başlatılacak ve yerleşil otomatik önyükleme girişiminde "
+"bulunacaktır.  Herhangi bir tuşa basarak bu işlemi sonlandırabilirsiniz.  "
+"Daha sonra aşağıdaki komutları çalıştırmanızın gerekeceği NeTTrom komut "
+"sistemine gireceksiniz:"
 
 #. Type: note
 #. Description
@@ -129,14 +127,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Bu işlemi sadece bir kere yapmanız gerekiyor.  Sonraki durumlarda \"boot\" "
-"komutunu girin veya bir sonraki Debian kurulum aşamasıyla devam edilmesi "
-"için sistemi yeniden başlatın."
+"komutunu girin veya bir sonraki kurulum aşamasıyla devam edilmesi için "
+"sistemi yeniden başlatın."
 
 #. Type: note
 #. Description
@@ -157,7 +154,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
