[l10n] [l10n-sync] Synchronising with translation files from packages/po
r31270

--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-05 17:02+0200\n"
-"Last-Translator: Holger Wansing <h.wansing@onlinehome.de>\n"
+"PO-Revision-Date: 2005-10-08 23:00+0200\n"
+"Last-Translator: Jens Seidel <jensseidel@users.sf.net>\n"
 "Language-Team: Debian German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,10 +35,10 @@ msgstr ""
 msgid "Continue without boot loader"
 msgstr "Ohne Bootloader fortfahren"
 
+# FIXME: Linux-spezifisch
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -46,9 +46,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Einige Variablen müssen in der Pegasos OpenFirmware eingestellt sein, damit "
-"der Computer automatisch startet. Am Ende der Installation wird der Computer "
-"neu starten. Stellen Sie die folgenden Pegasos OpenFirmware-Variablen am "
-"Boot-Prompt ein, damit der Computer automatisch startet."
+"Ihr System Linux automatisch startet. Am Ende der Installation wird das "
+"System neu starten. Stellen Sie die folgenden Pegasos OpenFirmware-Variablen "
+"am Boot-Prompt ein, damit der Computer automatisch startet:"
 
 #. Type: note
 #. Description
@@ -91,10 +91,10 @@ msgstr " an der Eingabeaufforderung von OpenFirmware eingeben."
 msgid "Setting firmware variables for automatic boot"
 msgstr "Setzen der Firmware-Variablen für den automatischen Start"
 
+# FIXME: Linux-spezifisch
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -102,11 +102,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Damit Ihr Computer Debian automatisch starten kann, müssen in der Netwinder "
-"NeTTrom Firmware einige Variablen festgelegt werden. Am Ende der "
-"Installation wird der Computer neu starten und die Firmware versuchen zu "
-"booten. Sie können dies durch Drücken einer beliebigen Taste abbrechen, "
-"wodurch Sie in den NeTTrom Befehlsmodus gelangen. Führen Sie dort folgende "
+"Damit Ihr System Linux automatisch starten kann, müssen in der Netwinder "
+"NeTTrom-Firmware einige Variablen gesetzt werden. Am Ende dieses "
+"Installationsschritts wird das System neu starten und die Firmware versuchen "
+"zu booten. Sie können dies durch Drücken einer beliebigen Taste abbrechen, "
+"wodurch Sie in den NeTTrom-Befehlsmodus gelangen. Führen Sie dort folgende "
 "Befehle aus:"
 
 #. Type: note
@@ -130,13 +130,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Dies muss nur einmal ausgeführt werden. Geben Sie danach den »boot«-Befehl "
-"ein oder starten Sie den Computer neu, um mit dem nächsten "
+"ein oder starten Sie das System neu, um mit dem nächsten "
 "Installationsschritt fortzufahren."
 
 #. Type: note
@@ -159,7 +158,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
