--- a/debian/po/zh_CN.po
+++ b/debian/po/zh_CN.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-07-27 12:25+1200\n"
+"PO-Revision-Date: 2005-10-08 20:24-0500\n"
 "Last-Translator:  Ming Hua <minghua@rice.edu>\n"
 "Language-Team:  Debian Chinese [GB] <debian-chinese-gb@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -30,16 +30,15 @@ msgstr "不安装启动引导器，继续"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"要使系统能自动启动您的系统，您需要在 Pegasos OpenFirmware 中设置一些变量。在"
-"安装结束后，系统将会重启。在出现 Pegasos OpenFirmware 提示符后，请设置以下几"
-"个 OpenFirmware 变量以开启自动启动功能："
+"要使系统能自动启动 linux，您需要在 Pegasos OpenFirmware 中设置一些变量。在安"
+"装结束后，系统将会重启。在出现 Pegasos OpenFirmware 提示符后，请设置以下几个 "
+"OpenFirmware 变量以开启自动启动功能："
 
 #. Type: note
 #. Description
@@ -83,7 +82,6 @@ msgstr "正在为自动启动设置 firmware 变量"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -91,9 +89,9 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"要使系统能自动启动 Debian，您需要在Netwinder NeTTrom 固件中设置一些变量。在安"
-"装结束后，系统将会重启，固件将尝试自动启动。您可以按任意键将其中止，并自动进"
-"入 NeTTrom 命令行系统。您必须在命令行中执行以下命令："
+"要使系统能自动启动 linux，您需要在 Netwinder NeTTrom 固件中设置一些变量。在安"
+"装结束后，系统将会重启，固件将尝试自动启动。您可以按任意键将其中止。然后您就"
+"会进入 NeTTrom 命令行系统，您必须在其中执行以下命令："
 
 #. Type: note
 #. Description
@@ -116,13 +114,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"此过程只需要被执行一次。然后，请输入“boot”命令或重启系统以进行下一阶段 "
-"Debian 安装程序。"
+"此过程只需要被执行一次。然后，请输入“boot”命令或重启系统以进行安装程序的下一"
+"阶段。"
 
 #. Type: note
 #. Description
@@ -143,7 +140,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
