--- a/debian/po/id.po
+++ b/debian/po/id.po
@@ -128,13 +128,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Anda hanya perlu melakukan ini sekali. Setelah itu, masukkan perintah \"boot"
-"\" atau reboot sistem untuk melanjutkan tahap instalasi Debian berikutnya."
+"\" atau reboot sistem untuk melanjutkan tahap instalasi berikutnya."
 
 #. Type: note
 #. Description
@@ -155,10 +154,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Anda perlu melakukan boot secara manual dengan ${KERNEL} pada partisi "
-"${BOOT} dan ${ROOT} diberikan sebagai argumen."
+"Anda perlu melakukan boot secara manual dengan kernel ${KERNEL} pada partisi "
+"${BOOT} dan ${ROOT} diberikan sebagai argumen kernel."
